# rust-experiments-adv

./: Cargo.toml  README.md  makefile
exec_a/: Cargo.toml
exec_b/: Cargo.toml
src/: main.rs  settings.rs
subpackage_a/: Cargo.toml
subpackage_b/: Cargo.toml
